# NeedForCrous

./: .dockerignore  .env.template  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.MD  SECURITY.md  build_exe.bat  build_exe.ps1  main.py  pyproject.toml
docs/: index.html  styles.css
src/: authenticator.py  models.py  notification_builder.py  parser.py  settings.py  telegram_notifier.py
