[tool.poetry]
name = "need-for-crous"
version = "1.0.0"
description = "A powerful Telegram bot to monitor CROUS accommodation availability with automatic notifications."
authors = ["Kira-Mari <kira-mari@users.noreply.github.com>"]
readme = "README.MD"
license = "MIT"
homepage = "https://github.com/kira-mari/NeedForCrous"
repository = "https://github.com/kira-mari/NeedForCrous"
keywords = ["crous", "logement", "bot", "telegram", "selenium", "automation"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
telepot = "^12.7"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.23.1"
pydantic-settings = "^2.4.0"
pydantic = "^2.8.2"
chromedriver-py = "^127.0.6533.99"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
